--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sound-book",
-  "homepage": "https://mywebsite.com",
+  "homepage": "https://fabio90h.github.io/soundBook/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
