--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "sound-book",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://fabio90h.github.io/soundBook/",
+  "private": "false",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -12,6 +13,8 @@
     "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "react-multi-carousel": "^2.8.5",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.12",
