--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "react-multi-carousel": "^2.8.5",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.12",
@@ -25,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
